# bank-account

./: .gitignore  README.md  SUMMARY.md  TESTING_REPORT.md  XXbank.dbXX  coverage.xml  pyproject.toml
bank_system/: __init__.py  account_manager.py  cli.py  database.py  models.py
tests/: test_account_manager.py  test_account_manager_extended.py  test_cli.py  test_cli_extended.py  test_cli_main.py  test_core_business_logic.py  test_coverage_completion.py  test_database.py  test_integration.py  test_models.py
